<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:id="@+id/txt_TrackBuildText"
      android:layout_width="493dp"
      android:layout_height="71dp"
      android:layout_marginStart="52dp"
      android:layout_marginTop="68dp"
      android:text="@string/txt_NewTrack"
      android:textAlignment="textStart"
      android:textSize="40sp"
      android:textStyle="italic"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ScrollView
      android:id="@+id/view_SongList"
      android:layout_width="264dp"
      android:layout_height="492dp"
      android:layout_marginEnd="236dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.395">

    <LinearLayout
        android:id="@+id/layout_SongList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
  </ScrollView>

  <Button
      android:id="@+id/btn_AddToPlaylist"
      android:layout_width="275dp"
      android:layout_height="57dp"
      android:layout_marginStart="100dp"
      android:layout_marginBottom="68dp"
      android:background="@color/colorPrimaryDark"
      android:onClick="returnSelectedTrack"
      android:text="@string/txt_ConfirmAddTrack"
      android:textAlignment="center"
      android:textColor="@color/colorAccent"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/txt_PlayingSong"
      android:layout_width="437dp"
      android:layout_height="62dp"
      android:layout_marginBottom="48dp"
      android:textAlignment="textStart"
      android:textSize="40sp"
      app:layout_constraintBottom_toTopOf="@+id/btn_AddToPlaylist"
      app:layout_constraintStart_toStartOf="@+id/btn_AddToPlaylist" />
</androidx.constraintlayout.widget.ConstraintLayout>